--- a/Projecte1.ipynb
+++ b/Projecte1.ipynb
@@ -25,16 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "8d684458-b81b-4dfa-bdaf-930e21c8db7b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pandas import read_csv\n",
+    "\n",
     "from sklearn.preprocessing import MinMaxScaler, RobustScaler, PowerTransformer\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.neighbors import LocalOutlierFactor\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "\n",
     "\n",
     "from imblearn.over_sampling import SMOTENC"
    ]
@@ -56,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_69129/1358611933.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "/tmp/ipykernel_5891/1358611933.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(data[data[\"Target\"]==1].count()[0]/462)\n"
      ]
     }
@@ -217,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x70c60d340220>"
+       "<seaborn.axisgrid.PairGrid at 0x7285685f2c20>"
       ]
      },
      "execution_count": 5,
@@ -251,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "20a06870-cd7f-4b9e-bebd-aa27568f26de",
    "metadata": {},
    "outputs": [
@@ -292,7 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_69129/136066189.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "/tmp/ipykernel_5891/136066189.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(f'The number of positive cases removed is {data[outliers & (data[\"Target\"]==1)].count()[0]}')\n"
      ]
     }
@@ -323,7 +326,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x70c6043850c0>"
+       "<seaborn.axisgrid.PairGrid at 0x72855f5a65f0>"
       ]
      },
      "execution_count": 7,
@@ -348,9 +351,7 @@
   {
    "cell_type": "markdown",
    "id": "03886f97-fad2-46c8-ac75-47e7f565910b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Preprocessing\n",
     "Aquí posem el preprocessing un cop fet els outliers. És a dir, treure correl·lacions, assegurar gaussianitat i escalar.\n",
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "47d1e6fe-ddda-417d-a766-596e72d57fc0",
    "metadata": {},
    "outputs": [],
@@ -371,7 +372,7 @@
     "    # Creating the regression with TB and DB\n",
     "    if linModel is None:\n",
     "        linModel = LinearRegression().fit(X[[\"TB\"]], X[\"DB\"])\n",
-    "    residual = X[\"DB\"] - reg.predict(X[[\"TB\"]])\n",
+    "    residual = X[\"DB\"] - linModel.predict(X[[\"TB\"]])\n",
     "    X[\"DB_residual\"] = residual\n",
     "    X.drop(\"DB\", axis=1, inplace=True)\n",
     "\n",
@@ -400,14 +401,14 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'reg' is not defined",
+     "evalue": "name 'LinearRegression' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[9], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m X\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTarget\u001b[39m\u001b[38;5;124m\"\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m y \u001b[38;5;241m=\u001b[39m NO_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTarget\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m----> 5\u001b[0m X, y, linModel, PwrModel, Scaler \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocessing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m sns\u001b[38;5;241m.\u001b[39mpairplot(data\u001b[38;5;241m=\u001b[39mX)\n",
-      "Cell \u001b[0;32mIn[8], line 8\u001b[0m, in \u001b[0;36mpreprocessing\u001b[0;34m(X, y, linModel, PwrModel, Scaler)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m linModel \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m      7\u001b[0m     linModel \u001b[38;5;241m=\u001b[39m LinearRegression()\u001b[38;5;241m.\u001b[39mfit(X[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTB\u001b[39m\u001b[38;5;124m\"\u001b[39m]], X[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDB\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m----> 8\u001b[0m residual \u001b[38;5;241m=\u001b[39m X[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDB\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[43mreg\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(X[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTB\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n\u001b[1;32m      9\u001b[0m X[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDB_residual\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m residual\n\u001b[1;32m     10\u001b[0m X\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDB\u001b[39m\u001b[38;5;124m\"\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'reg' is not defined"
+      "Cell \u001b[0;32mIn[8], line 7\u001b[0m, in \u001b[0;36mpreprocessing\u001b[0;34m(X, y, linModel, PwrModel, Scaler)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Creating the regression with TB and DB\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m linModel \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m----> 7\u001b[0m     linModel \u001b[38;5;241m=\u001b[39m \u001b[43mLinearRegression\u001b[49m()\u001b[38;5;241m.\u001b[39mfit(X[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTB\u001b[39m\u001b[38;5;124m\"\u001b[39m]], X[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDB\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m      8\u001b[0m residual \u001b[38;5;241m=\u001b[39m X[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDB\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m reg\u001b[38;5;241m.\u001b[39mpredict(X[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTB\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n\u001b[1;32m      9\u001b[0m X[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDB_residual\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m residual\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'LinearRegression' is not defined"
      ]
     }
    ],
@@ -457,12 +458,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48ea5440-27c4-410f-9b72-200465cda2ad",
+   "metadata": {},
+   "source": [
+    "# Method 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad737607-7d5a-4094-9601-d040e67b6774",
+   "execution_count": 10,
+   "id": "c33a1b24-ba2a-458c-85c2-e38e9e2706d0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def confusion(true, pred):\n",
+    "    \"\"\"\n",
+    "    Function for pretty printing confusion matrices\n",
+    "    \"\"\"\n",
+    "    true.name = 'target'\n",
+    "    pred.name = 'predicted'\n",
+    "    cm = pd.crosstab(true.reset_index(drop=True), pred.reset_index(drop=True))\n",
+    "    cm = cm[cm.index]\n",
+    "    return cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f0278123-9ad1-4270-93cf-72e866391d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Female</th>\n",
+       "      <th>TB</th>\n",
+       "      <th>DB</th>\n",
+       "      <th>Alkphos</th>\n",
+       "      <th>Sgpt</th>\n",
+       "      <th>Sgot</th>\n",
+       "      <th>TP</th>\n",
+       "      <th>ALB</th>\n",
+       "      <th>A/R</th>\n",
+       "      <th>Target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>282</td>\n",
+       "      <td>13</td>\n",
+       "      <td>74</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>180</td>\n",
+       "      <td>42</td>\n",
+       "      <td>62</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>212</td>\n",
+       "      <td>41</td>\n",
+       "      <td>80</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>152</td>\n",
+       "      <td>35</td>\n",
+       "      <td>81</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>194</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Female   TB   DB  Alkphos  Sgpt  Sgot   TP  ALB   A/R Target\n",
+       "0   48      0  4.5  2.3      282    13    74  7.0  2.4  0.52      0\n",
+       "1   39      0  1.9  0.9      180    42    62  7.4  4.3  1.38      0\n",
+       "2   23      0  1.0  0.3      212    41    80  6.2  3.1  1.00      0\n",
+       "3   42      1  0.7  0.2      152    35    81  6.2  3.2  1.06      0\n",
+       "4   52      1  0.6  0.1      194    10    12  6.9  3.3  0.90      1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NO_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5d554001-5e04-46ab-b5ab-329a7329248e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>predicted</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>target</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>188</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "predicted    0    1\n",
+       "target             \n",
+       "0          188  120\n",
+       "1           26  104"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = NO_data.copy()\n",
+    "X.drop(\"Target\", axis=1, inplace=True)\n",
+    "y = NO_data[\"Target\"]\n",
+    "\n",
+    "X_train, y_train, linModel, PwrModel, Scaler = preprocessing(X,y)\n",
+    "\n",
+    "model = LogisticRegression(class_weight='balanced', random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "confusion(y_train, pd.Series(model.fit(X_train, y_train).predict(X_train)))"
+   ]
   }
  ],
  "metadata": {
